objects/Lead_Report__c.object
<CustomObject>
    <label>Lead Report</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Lead_Age__c</fullName>
        <label>Lead Age</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Owner__c</fullName>
        <label>Lead Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Status__c</fullName>
        <label>Lead Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Count__c</fullName>
        <label>Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>